tests/semantic_errors/sasha1_3.tl
require "ifj21"
function xuj (st : string , st : string )
end
